...
  },
];

export const discoveryMerchants = [
  {
    uuid: '0dbcc17d-16c1-4df5-89ec-c32007ebd38c',
    name: 'Talabix Demo Kitchen',
    slug: 'talabix-demo-kitchen',
    status: 'active',
    branches: [
      {
        uuid: '2ea03ee8-f346-42c2-968d-ab4aeae7040d',
        name: 'Olaya Branch',
...
